# chess-transformer

./: .gitignore  README.md  app.py  evaluate.py  model.py  pyproject.toml  requirements.txt  train_rl.py  train_sl.py
chess_core/: __init__.py  engine.py  env.py  mapping.py
common/: __init__.py  files.py
data/: process_lichess.py  process_lichess_human.py  process_lichess_stockfish.py  upload_to_hf.py
rl/: __init__.py  buffer.py  trainer.py
utils/: __init__.py  buffer.py  chess_env.py  engine.py  mapping.py
