[project]
name = "chess-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "datasets>=4.6.1",
    "gradio>=6.8.0",
    "gradio-client>=2.2.0",
    "huggingface-hub>=1.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "regex>=2026.2.28",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "spaces>=0.47.0",
    "swanlab>=0.7.10",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
